Bug 464552 - KWrite configure tab looks very strange in small windows and isn't usable
Summary: KWrite configure tab looks very strange in small windows and isn't usable
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: kwrite (other bugs)
Version First Reported In: 22.12.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
: 469233 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-01-20 14:47 UTC by Adam Fontenot
Modified: 2023-05-01 13:47 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot of the configuration screen issue in KWrite (53.92 KB, image/png)
2023-01-20 14:47 UTC, Adam Fontenot
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Fontenot 2023-01-20 14:47:38 UTC
Created attachment 155454 [details]
screenshot of the configuration screen issue in KWrite

SUMMARY
The new in-tab configuration screen is compressed heavily (with scroll bars) to fit in the window, when the window is small. In order to change settings, a user is likely to have to resize their KWrite window, which is undesirable.

I'm reporting this bug against the KWrite component because it affects KWrite much more significantly (see below), but it's a problem for Kate as well.

STEPS TO REPRODUCE
1. Open a small KWrite window.
2. Settings > Configure KWrite

OBSERVED RESULT

The configure screen is too small to use. (See screenshot) This issue especially affects KWrite because it uses big friendly icons for the configuration categories, rather than a simple list. This means that much more scrolling is involved in changing settings in KWrite.

To add insult to injury, configuration tabs don't have the context menu that other tabs have, so you can't even detach the tab. That prevents the most obvious workaround for users who can't easily resize the window without altering their workflow.

EXPECTED RESULT

The configure screen remains fully usable for any starting window size. (A way to disable the in-tab configuration screen would also help users work around the issue, but wouldn't solve the underlying problem here.)

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.26.5
KDE Frameworks Version: 5.101.0
Qt Version: 5.15.8
Kernel Version: 6.1.5-arch2-1 (64-bit)
Graphics Platform: X11
Comment 1 Bug Janitor Service 2023-02-20 22:30:50 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/1119
Comment 2 Christoph Cullmann 2023-02-20 22:52:07 UTC
Git commit 4f5c982a5101d92f0a40fe1bd2d82f843c610eab by Christoph Cullmann.
Committed on 20/02/2023 at 22:30.
Pushed by cullmann into branch 'master'.

back to config dialog

rational is that for small window sizes the current inline dialog is bad to use

M  +9    -28   apps/lib/kateconfigdialog.cpp
M  +7    -19   apps/lib/kateconfigdialog.h
M  +9    -20   apps/lib/katemainwindow.cpp

https://invent.kde.org/utilities/kate/commit/4f5c982a5101d92f0a40fe1bd2d82f843c610eab
Comment 3 Waqar Ahmed 2023-05-01 13:47:20 UTC
*** Bug 469233 has been marked as a duplicate of this bug. ***