back to config dialog

rational is that for small window sizes the current inline dialog is bad to use

BUG: 464552